--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Pirathib Mahalingam</title>
@@ -7,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
 </head>
+
 <body>
-  <div class="body-div">
-    <app-root></app-root>
-  </div>
+  <app-root class="root-div"></app-root>
 </body>
+
 </html>
