--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,20 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <!-- <div id="loader" class="loadingSpinner" style="display: flex;">
+    <img src="assets/img/loadingSpinner.gif" alt="Loading Spinner">
+  </div> -->
+
+  <!-- <div id="root" style="display: none;"> -->
+    <app-root></app-root>
+  <!-- </div> -->
 </body>
+
+<!-- <script>
+  document.addEventListener('DOMContentLoaded', (event) => {
+    document.getElementById('loader').style.display = 'none';
+    document.getElementById('root').style.display = 'block';
+  })
+</script> -->
 
 </html>
