--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -123,6 +123,8 @@
         <li>
             <b>express</b> : ^4.18.2</li>
         <li>
+            <b>ng-recaptcha</b> : ^13.2.1</li>
+        <li>
             <b>rxjs</b> : ~7.8.0</li>
         <li>
             <b>tslib</b> : ^2.3.0</li>
